@@ -83,6 +83,15 @@
   <launchable type="desktop-id">org.gnome.Calculator.desktop</launchable>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="46~rc" date="2024-03-02" type="development">
+      <description>
+        <p>Overview of changes in gnome-calculator 46.rc</p>
+        <ul>
+          <li>Updated translations</li>
+          <li>Metainfo (homepage, developer id) improvements (Sophie Herold, Robert Roth)</li>
+        </ul>
+      </description>
+    </release>
     <release version="46~beta" date="2024-02-11" type="development">
       <description>
         <p>Overview of changes in gnome-calculator 46.beta</p>
