@@ -1,3 +1,7 @@
+Overview of changes in gnome-calculator 46.rc
+    * Updated translations
+    * Metainfo (homepage, developer id) improvements (Sophie Herold, Robert Roth)
+
 Overview of changes in gnome-calculator 46.beta
     * Updated translations
 
